# E-dzienniczek

./: .eslintcache  .gitignore  E-dzienniczek API.yaml  Procfile  README.md  db.sqlite3  package-lock.json  package.json  pyproject.toml  requirements.txt
.history/public/: index_20201106154759.html  index_20201106154822.html  index_20201106154907.html
.history/src/: App_20201105171637.css  App_20201105172115.js  App_20201105172324.js  App_20201106144528.css  App_20201106144543.css  App_20201106144617.css  App_20201106144619.css  App_20201110160726.js  App_20201113120150.js  App_20201117164626.js  App_20201117164814.js  App_20201117165105.js  App_20201117215116.js  App_20201117215408.js  App_20201117220218.js  App_20201117221918.js  App_20201117221922.js  App_20201117222828.js  App_20201117222938.js  App_20201117222942.js  App_20201117223206.js  App_20201117223218.js  App_20201117224015.js  App_20201117224507.js  App_20201117225527.js  App_20201117225536.js  App_20201117225543.js  App_20201117225904.js  App_20201117230214.js  App_20201117230323.js  App_20201117230607.js  App_20201117231754.js  App_20201117231841.js  App_20201117231949.js  App_20201118004139.js  App_20201118132501.js  App_20201118133043.js  index_20201127132112.js
backend/: admin.py  models.py  permissions.py  serializers.py  settings.py  urls.py  views.py
backend/migrations/: 0001_initial.py  0002_auto_20201109_1756.py  0003_auto_20201202_1829.py  0004_auto_20201207_2059.py  0005_auto_20201207_2118.py  0006_announcements.py  0011_message.py  (+6 more)
public/: index.html
src/: App.css  App.js  index.js
(+496 files in other folders)
